--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bbb-service-area-map",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,7 +15,7 @@
     "papaparse": "^5.3.2"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^3.2.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.0.0"
   }
 }
